# AI-Film-Studio

./: .commit-marker  .coverage  .coveragerc  .cursorrules  .dockerignore  .env.dev.example  .env.dev.template  .env.example  .env.prod.example  .env.prod.template  .env.production.example  .env.sandbox.example  .env.sandbox.template  .env.staging.example  .env.staging.template  .gitignore  .pre-commit-config.yaml  .vitestrc.json  =7.4.0  ADD_TO_GITHUB_SECRETS.md  AI_ASSISTANT_CONNECTION.md  AI_FRAMEWORK_INTEGRATION.md  AI_SERVICES_FIX_SUMMARY.md  BLUEPRINT_UPDATE_SUMMARY.md  CDK_PYTHON_ISSUE_SUMMARY.md  CHANGELOG.md  CHARACTER_IMAGE_GENERATION_GUIDE.md  CHECK_DEPLOYMENT_STATUS.md  CI_CD_SUMMARY.md  CLINE_SETUP_GUIDE.md  COMPLETE_DEPLOYMENT.md  CONNECTION_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_ISSUE_ANALYSIS.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW_STEPS.md  DEVELOPMENT_FEATURES_SUMMARY.md  DOCUMENTATION_SUMMARY.md  DOCUMENT_REVIEW_INVESTOR_BLUEPRINT.md  Dockerfile  (+70 more)
.cursor/: config.json  mcp.yaml  settings.json  tasks.json
.devcontainer/: devcontainer.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  copilot-instructions.md  release.yml
Deployment-Process/: CI_CD_SETUP.md  DEPLOYMENT_FIX.md  DEPLOY_NOW.md  ENVIRONMENT_SETUP_CHECKLIST.md  GITHUB_ENVIRONMENTS_SETUP.md  INDEX.md  QUICK_DEPLOYMENT_REFERENCE.md  README.md  SECRETS_SETUP_GUIDE.md  create-iam-users.ps1
ai/: README.md
ai_film_studio/: __init__.py  pipeline.py
alembic/: env.py
amplify/: README.md  backend.ts  package-lock.json  package.json  tsconfig.json
backend/: .dockerignore  .env.example  README.md  package.json  requirements.txt
business/: README.md
cloud-infra/: README.md
config/: default.json
database/: schema.sql
docs/: AI_TESTING_TOOLS.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_VISUAL.md  AUTOMATION_WORKFLOW.md  BLUEPRINT_QUICK_REFERENCE.md  BRANCHING_STRATEGY.md  BRANCH_QUICK_REFERENCE.md  BRANCH_SETUP_GUIDE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  ENVIRONMENT_CONFIGURATION_GUIDE.md  ENVIRONMENT_OVERVIEW.md  ENVIRONMENT_SETUP_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INFOGRAPHIC_GUIDE.md  INVESTOR_DEVELOPER_MASTER_BLUEPRINT.md  INVESTOR_PRESENTATION.md  MASTER_BLUEPRINT.md  QUICK_REFERENCE.md  README.md  WEBSITE-PAGES-FUNCTIONALITIES.md  ai-ml-stack.md  amplify-supabase-setup.md  browser-only-workflow.md  getting_started.md  landing-page.html  production-readiness.md  tech-stack-mapping.md  youtube-video-feature-spec.md
examples/: basic_pipeline.py  demo_automation.py  short_film.txt
frontend/: .dockerignore  .env.development  .env.example  .env.local.example  .env.production  .eslintignore  .gitignore  .playwrightrc.json  Dockerfile  ESLINT_MIGRATION.md  ESLINT_SETUP.md  FEATURES.md  README.md  SUMMARY.md  TECHNICAL.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.production.ts  playwright.config.ts  tailwind.config.ts  vitest.config.ts
infrastructure/: README.md
media/: README.md
pipeline/: __init__.py  image_generator.py
salesforce/: README.md
scripts/: amplify-cloudshell-commands.md  amplify-cloudshell-setup.sh  aws-codespace-setup.sh  backup.sh  build-push-ecr.ps1  build-push-ecr.sh  check-deployment-status.ps1  deploy-free-tier.sh  deploy-now.sh  deploy-to-amplify.sh  deploy.sh  init-db.sql  install-ai-assistants.ps1  install-test-deps.bat  install-test-tools.ps1  install-test-tools.sh  localstack-init.sh  preprocess-media.py  quick-deploy.sh  run-pre-deployment-tests.ps1  run-pre-deployment-tests.sh  run_tests.py  seed_data.py  setup-branches.sh  setup-playwright-tests.sh  setup.sh  test-cline-extension.ps1  test-cline-extension.sh  version-tag.sh
src/: __init__.py
static/: index.html
templates/: create.html  credits.html  dashboard.html  home.html  index.html  job_progress.html  login.html  project.html  settings.html  video.html
tests/: README.md  __init__.py  ai_test_generator.py  cli_test_tool.py  conftest.py  conftest_enhanced.py  requirements-test.txt  test_ai_models.py  test_ai_services.py  test_api.py  test_config.py  test_credit_api.py  test_image_engine.py  (+10 more)
(+524 files in other folders)
